--- a/SoundLog/SoundLog/Presentation/Base.lproj/Main.storyboard
+++ b/SoundLog/SoundLog/Presentation/Base.lproj/Main.storyboard
@@ -56,15 +56,14 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="_monthlylbl_bg" translatesAutoresizingMaskIntoConstraints="NO" id="OIt-wt-5jL">
                                 <rect key="frame" x="30" y="173" width="109" height="13"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="월별 음악기록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sU1-M8-wIR">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="월별 음악기록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sU1-M8-wIR">
                                 <rect key="frame" x="30" y="167" width="97" height="16"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="GmarketSansMedium" family="Gmarket Sans" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sound Log" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1M7-Lr-gDE">
-                                <rect key="frame" x="154" y="100" width="187" height="48"/>
+                                <rect key="frame" x="177" y="95" width="165" height="48"/>
                                 <fontDescription key="fontDescription" name="GmarketSansMedium" family="Gmarket Sans" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -75,12 +74,16 @@
                         <color key="tintColor" red="0.96197502710000005" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="Vfp-Ei-fsV" firstAttribute="bottom" secondItem="ADt-nx-acz" secondAttribute="bottom" constant="653" id="16S-RC-Wsm"/>
+                            <constraint firstItem="sU1-M8-wIR" firstAttribute="leading" secondItem="OIt-wt-5jL" secondAttribute="leading" id="1LL-TL-12s"/>
+                            <constraint firstItem="sU1-M8-wIR" firstAttribute="top" secondItem="Vfp-Ei-fsV" secondAttribute="top" constant="120" id="9xR-9z-A0H"/>
                             <constraint firstItem="OIt-wt-5jL" firstAttribute="top" secondItem="Vfp-Ei-fsV" secondAttribute="top" constant="126" id="CUg-wH-gwS"/>
-                            <constraint firstItem="Vfp-Ei-fsV" firstAttribute="bottom" secondItem="1M7-Lr-gDE" secondAttribute="bottom" constant="613" id="FTI-fS-CY8"/>
-                            <constraint firstAttribute="trailing" secondItem="1M7-Lr-gDE" secondAttribute="trailing" constant="49" id="LRb-Bt-LGs"/>
-                            <constraint firstItem="ADt-nx-acz" firstAttribute="leading" secondItem="Vfp-Ei-fsV" secondAttribute="leading" constant="180" id="PU7-KV-n9z"/>
-                            <constraint firstItem="1M7-Lr-gDE" firstAttribute="top" secondItem="Vfp-Ei-fsV" secondAttribute="top" constant="53" id="S1M-Fc-Phd"/>
-                            <constraint firstItem="1M7-Lr-gDE" firstAttribute="leading" secondItem="Vfp-Ei-fsV" secondAttribute="leading" constant="154" id="TZu-co-Ser"/>
+                            <constraint firstItem="ADt-nx-acz" firstAttribute="top" secondItem="Vfp-Ei-fsV" secondAttribute="top" constant="16" id="EUY-0i-HTn"/>
+                            <constraint firstItem="Vfp-Ei-fsV" firstAttribute="bottom" secondItem="1M7-Lr-gDE" secondAttribute="bottom" constant="618" id="FTI-fS-CY8"/>
+                            <constraint firstAttribute="trailing" secondItem="1M7-Lr-gDE" secondAttribute="trailing" constant="48" id="LRb-Bt-LGs"/>
+                            <constraint firstItem="ADt-nx-acz" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Vfp-Ei-fsV" secondAttribute="leading" id="PU7-KV-n9z"/>
+                            <constraint firstItem="1M7-Lr-gDE" firstAttribute="top" secondItem="ADt-nx-acz" secondAttribute="top" constant="32" id="S1M-Fc-Phd"/>
+                            <constraint firstItem="1M7-Lr-gDE" firstAttribute="leading" secondItem="ADt-nx-acz" secondAttribute="leading" constant="-14" id="TZu-co-Ser"/>
+                            <constraint firstItem="Vfp-Ei-fsV" firstAttribute="trailing" secondItem="ADt-nx-acz" secondAttribute="trailing" constant="36" id="hAd-FL-Nes"/>
                             <constraint firstItem="OIt-wt-5jL" firstAttribute="leading" secondItem="Vfp-Ei-fsV" secondAttribute="leading" constant="30" id="tIw-cy-KeW"/>
                         </constraints>
                     </view>
