--- a/SoundLog/SoundLog/Presentation/SettingsScene/View/Setting.storyboard
+++ b/SoundLog/SoundLog/Presentation/SettingsScene/View/Setting.storyboard
@@ -16,7 +16,7 @@
         <!--Theme View Controller-->
         <scene sceneID="vdD-NL-20k">
             <objects>
-                <viewController storyboardIdentifier="ThemeViewController" id="HiR-Kc-iDR" customClass="ThemeViewController" customModule="OmyAk" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ThemeViewController" id="HiR-Kc-iDR" customClass="ThemeViewController" customModule="SoundLog" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="347-tH-3A8">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -41,7 +41,7 @@
         <!--Language View Controller-->
         <scene sceneID="2nR-a2-8WV">
             <objects>
-                <viewController storyboardIdentifier="LanguageViewController" id="JKr-Jd-Kvt" customClass="LanguageViewController" customModule="OmyAk" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LanguageViewController" id="JKr-Jd-Kvt" customClass="LanguageViewController" customModule="SoundLog" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pIG-Dp-NTd">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -66,7 +66,7 @@
         <!--Bookmark View Controller-->
         <scene sceneID="0y9-9R-upi">
             <objects>
-                <viewController storyboardIdentifier="BookmarkViewController" id="6qS-SJ-ere" customClass="BookmarkViewController" customModule="OmyAk" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BookmarkViewController" id="6qS-SJ-ere" customClass="BookmarkViewController" customModule="SoundLog" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NZ1-Bj-8N4">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -107,7 +107,7 @@
         <!--Setting View Controller-->
         <scene sceneID="Mha-qM-uAB">
             <objects>
-                <viewController storyboardIdentifier="SettingMenus" id="2Nc-OJ-HIS" customClass="SettingViewController" customModule="OmyAk" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingMenus" id="2Nc-OJ-HIS" customClass="SettingViewController" customModule="SoundLog" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hc6-S6-Qkg">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
